[#51278267] Fixed tablet mascot jump

--- a/source/stylesheets/_homepage.css.scss
+++ b/source/stylesheets/_homepage.css.scss
@@ -111,7 +111,7 @@
 
   @include breakpoint(tablet) {
     width: 300px;
-    height: auto;
+    height: 285px;
   }
 
   @include breakpoint(mobile) {
